css/project-page.css
:root{
  /*COLOR PALETTE*/
  --darkblue: #0d0826;
  --medblue: #171038;
  --linkcolor:#ff0076;
  --babyblue:#abb2ce;
  --babybluedark:#878da3;
  --brightblue:#241d5e;
  --titlebarcolor: rgb(36 29 94 /.8);
  /* -------------------- */

}

.container-fluid{
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  justify-self: center;
  align-items: center;

  flex-wrap:wrap;

  width: 60vw;
  height: fit-content;
  padding: 2rem;

  margin-top: 2rem;
  border-radius: 20px;
  background-color: rgb(23 16 56);
}

.project-title-img {
  width: 300px;
  height: 100%;

  justify-content: center;
}


.bkg-image {

  position:fixed;
  top: 0;
  left: 0;
  z-index: -1;

}
.bkg-image img {
  filter: blur(10px);
  width: 100vw;
  height: 100vh;
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;

}
a {
  color: var(--linkcolor);
}

.video-container {
  width: 100%;
  height:100%;
  max-width: 800px; /* Optional: limits max size */
  aspect-ratio: 16 / 9;
}
.video-container iframe {
  width: 100%;
  height: 100%;
}

.store-link-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  justify-self: center;
  column-gap: 30px;
  padding: 2rem;
}
.store-link-container img {
  height: 50px;
  width: 100%;
}

